<resources>
    <string name="app_name">Project_v3</string>
    <string name="dialog_neutral_button_text">OK</string>
    <string name="dialog_negative_button_text">NO</string>
    <string name="dialog_positive_button_text">YES</string>
    <string name="dialog_title_completed">Game completed.</string>
    <string name="dialog_message_lost">You lost.</string>
    <string name="dialog_message_won">You won!</string>
    <string name="dialog_message_tie">You tied.</string>
    <string name="dialog_title_confirmation">Are you sure?</string>
    <string name="dialog_message_forfeit">You are in the middle of a match. Continuing with this action will forfeit the match.</string>
    <string name="dialog_title_forfeited">Opponent forfeited.</string>
    <string name="dialog_title_join_failure">Could not join the match.</string>
    <string name="dialog_message_join_failure">The host has already left the match.</string>
    <string name="snackbar_text">has invited you to a match.</string>
    <string name="snackbar_action_text">JOIN</string>
    <string name="chat_button_text">SEND</string>
    <string name="compose_message_hint">Enter message</string>
    <string name="button_new_game_text">NEW GAME</string>
    <string name="button_invite_friend_text">INVITE FRIEND</string>
    <string name="button_view_invitations_text">VIEW INVITATIONS</string>
    <string name="button_view_achievements_text">VIEW ACHIEVEMENTS</string>
    <string name="animated_text_red">RED</string>
    <string name="animated_text_vs">VS</string>
    <string name="animated_text_green">GREEN</string>
    <string name="button_play_computer">PLAY COMPUTER</string>
    <string name="player2_label_computer">Computer</string>
    <string name="player1_label_player">Player</string>
    <string name="bot_difficulty_label_text">Computer Difficulty</string>
    <string name="bot_difficulty_button_text">PLAY</string>
    <string name="bot_difficulty_1">1</string>
    <string name="bot_difficulty_2">2</string>
    <string name="bot_difficulty_3">3</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="button_sign_out">SIGN OUT</string>
    <string name="computer_goes_first">Computer moves first:</string>
    <string name="button_view_leaderboard_text">VIEW LEADERBOARD</string>
</resources>
