<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/bot_difficulty_label_text"
        android:textSize="@dimen/bot_difficulty_label_textSize"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bot_difficulty_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/bot_difficulty_seekbar_labels_margin_top"
        android:id="@+id/bot_difficulty_labels"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bot_difficulty"
        android:layout_width="@dimen/bot_difficulty_seekbar_width"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text="@string/bot_difficulty_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/bot_difficulty_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:text="@string/bot_difficulty_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <SeekBar
        android:max="2"
        android:layout_marginBottom="@dimen/bot_difficulty_seekbar_margin_bottom"
        android:id="@+id/bot_difficulty"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/bot_difficulty_seekbar_width"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="play"
        android:text="@string/bot_difficulty_button_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bot_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>