<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.purduegmail.mobileapps.project_v3.MainActivity">

    <RelativeLayout
        android:layout_above="@id/buttons_container"
        android:layout_toStartOf="@id/tv_versus"
        android:id="@+id/container_red_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/red_chips"
            android:text="@string/animated_text_red"
            android:textSize="@dimen/animated_text_size"
            android:textColor="@color/colorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/red_chips"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/red_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
            <ImageView
                android:background="@drawable/red_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
            <ImageView
                android:background="@drawable/red_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
            <ImageView
                android:background="@drawable/red_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_margin="@dimen/textview_vs_margin"
        android:layout_above="@id/buttons_container"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_versus"
        android:text="@string/animated_text_vs"
        android:textSize="@dimen/animated_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_above="@id/buttons_container"
        android:layout_toEndOf="@id/tv_versus"
        android:id="@+id/container_green_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/green_chips"
            android:text="@string/animated_text_green"
            android:textSize="@dimen/animated_text_size"
            android:textColor="@color/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/green_chips"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/green_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
            <ImageView
                android:background="@drawable/green_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
            <ImageView
                android:background="@drawable/green_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
            <ImageView
                android:background="@drawable/green_chip"
                android:layout_width="@dimen/animated_chips_size"
                android:layout_height="@dimen/animated_chips_size" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:paddingTop="@dimen/buttons_container_paddingTop"
        android:layout_centerInParent="true"
        android:id="@+id/buttons_container"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_automatch"
            android:onClick="automatch"
            android:text="@string/button_new_game_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_player_select"
            android:onClick="playerSelect"
            android:text="@string/button_invite_friend_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_view_invitations"
            android:onClick="viewInvitations"
            android:text="@string/button_view_invitations_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_view_achievements"
            android:onClick="viewAchievements"
            android:text="@string/button_view_achievements_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="playComputer"
            android:text="@string/button_play_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signed_in_container"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/signed_in_as"
            android:layout_marginEnd="@dimen/signed_in_tag_marginEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="signOut"
            android:text="@string/button_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_signed_in_container"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/signed_in_tag_marginEnd"
            android:text="@string/not_signed_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>